--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "alok-jagawat-tweets-showcase",
-  "version": "0.1.0",
-  "private": true,
+  "name": "balaganapathi-tweets-showcase",
+  "version": "1.0.0",
+  "description": "A website showcasing Balaganapathi's tweets categorized by themes like saints, astrology, and philosophy",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fetch-tweets": "node scripts/fetchTweets.js"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "next": "^14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "twitter-api-v2": "^1.15.0",
+    "date-fns": "^2.30.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "@heroicons/react": "^2.0.18"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "typescript": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.0"
+  },
+  "author": "manojd929",
+  "license": "ISC"
 }
